# rust_crud_app

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs
src/controllers/auth/: login_user.rs  logout_user.rs  mod.rs
src/controllers/user/: delete_user.rs  get_user.rs  mod.rs  register_user.rs  update_user.rs
src/routes/: auth.rs  auth_routes.rs  mod.rs  user.rs  user_routes.rs  web_routes.rs
