[package]
name = "rust_crud_app"  # Name of the project
version = "0.1.0"     # Version of the project
edition = "2021"      # Rust edition to use

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = "0.3"
minijinja = "0.2"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"

