[package]
name = "rust_crud_app"  # Name of the project
version = "0.1.0"     # Version of the project
edition = "2021"      # Rust edition to use

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
minijinja = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"

